--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.daoge</groupId>
     <artifactId>EmojiNK</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -56,8 +56,7 @@
         <dependency>
             <groupId>cn.powernukkitx</groupId>
             <artifactId>powernukkitx</artifactId>
-            <version>5f01581497</version>
-            <scope>provided</scope>
+            <version>1.20.10-r1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
