fixed emoji-phrases.yml force replace + added some phrases as default phrases

--- a/src/main/resources/emoji-phrases.yml
+++ b/src/main/resources/emoji-phrases.yml
@@ -4,7 +4,9 @@ grimacing:
 grin: []
 joy:
   - "haha"
+  - "hhhh"
   - "lmao"
+  - "ﻬﻬﻬ"
   - "lmfao"
   - "joy"
 smile:
@@ -16,13 +18,15 @@ sweat_smile:
   - "sweat_smile"
 laughing:
   - "lol"
+  - "xd"
 innocent:
   - "trust me"
   - "not me"
   - "innocent"
 wink: []
 blush: []
-slight_smile: []
+slight_smile:
+  - ":)"
 upside_down:
   - "why"
 relaxed:
@@ -34,6 +38,7 @@ yum:
 relieved: []
 heart_eyes:
   - "love"
+  - "<3"
 kissing_heart: []
 kissing: []
 kissing_smiling_eyes: []
@@ -61,8 +66,10 @@ no_mouth:
 neutral_face:
   - "neutral_face"
   - "not funny"
+  - "._."
 expressionless:
   - "bruh"
+  - "-_-"
   - "expressionless"
 unamused: []
 rolling_eyes:
@@ -81,6 +88,7 @@ rage:
   - "mad"
   - "hate you"
   - "rage"
+  - ">:("
 pensive:
   - "alone"
   - "pensive"
@@ -89,4 +97,5 @@ confused:
 slight_frown:
   - "slight_frown"
   - "sad"
+  - ":("
 frowning2: []
